# rust-flutter-reactive

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  shell.nix
application/: Cargo.toml
application-new/implement/: Cargo.toml
application-new/implement/src/: application.rs
application-new/interface/: Cargo.toml
application/implement/: Cargo.toml
application/implement/src/: application.rs  lib.rs  store.rs
application/interface/: Cargo.toml
application/interface/src/: application.rs  lib.rs
application/src/: lib.rs
application/src/app/: application.rs  mod.rs
application/src/test/: mod.rs
bridge-ffi/: Cargo.toml
bridge-ffi-new/: Cargo.toml
bridge-ffi-new/src/: ffi.rs  lib.rs
bridge-ffi-new/src/adapter/: mod.rs  state_adapter.rs
bridge-ffi/src/: lib.rs
bridge-ffi/src/adapter/: action_adapter.rs  mod.rs  state_adapter.rs
bridge-ffi/src/app/: action_adapter.rs  mod.rs
bridge-ffi/src/test/: mod.rs
data/: Cargo.toml
data/src/: lib.rs
domain/: Cargo.toml
domain-new/interface/src/: lib.rs
domain/implement/: Cargo.toml
domain/implement/src/: successor.rs
domain/interface/: Cargo.toml
domain/interface/src/: successor.rs
domain/src/: lib.rs  successor.rs
domain/src/use_case/: mod.rs
presentation/: Cargo.toml
presentation-new/implement/: Cargo.toml
presentation-new/implement/src/reducer/: mod.rs  root.rs
presentation-new/implement/src/reducer/page/main_page/: mod.rs
presentation-new/interface/: Cargo.toml
presentation-new/interface/src/: lib.rs
presentation-new/interface/src/action/: mod.rs
presentation-new/interface/src/reducer/: mod.rs  root.rs  user.rs
presentation-new/interface/src/state/: mod.rs
presentation/implement/: Cargo.toml
presentation/implement/src/: lib.rs
presentation/implement/src/reducer/: root.rs  user.rs
presentation/interface/src/action/: mod.rs  root.rs  user.rs
presentation/interface/src/state/: mod.rs  root.rs  user.rs
presentation/src/: lib.rs
presentation/src/action/: mod.rs  user.rs
presentation/src/action/page/: mod.rs
presentation/src/reducer/: mod.rs  user.rs
presentation/src/reducer/page/: mod.rs
presentation/src/state/: mod.rs  user.rs
presentation/src/state/page/: mod.rs
presentation/src/test/: mod.rs
presentation/src/test/reducer/: mod.rs
root/: Cargo.toml
root/src/: injector.rs  lib.rs  thread_safe_app.rs
state-action/: Cargo.toml  build.rs
state-action/src/: lib.rs
state-action/src/flat/: actions.fbs  states.fbs
state-action/src/model/: .gitignore  mod.rs
ui/: README.md  pubspec.yaml
ui/android/app/: build.gradle
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/plugins/bridge_ffi/: README.md  pubspec.yaml
ui/plugins/bridge_ffi/android/: build.gradle  settings.gradle
ui/plugins/bridge_ffi/example/: README.md  pubspec.yaml
ui/plugins/bridge_ffi/ios/: .gitignore  bridge_ffi.podspec
ui/plugins/bridge_ffi/lib/: ActionFactory.dart  BridgeFfi.dart  ffi.dart
ui/test/: widget_test.dart
(+36 files in other folders)
