[package]
name = "bridge-ffi"
version = "0.1.0"
authors = ["Hadi <hadilashkari@gmail.com>"]
edition = "2018"

[lib]
name = "bridge_ffi"
crate-type = ["cdylib", "cdylib"]

[dependencies]
root = { path = "../root" }
state-action =  { path = "../state-action" }
presentation-interface = { path = "../presentation/interface" }
flatbuffers = "2.0.0"
ffi_helpers = "0.2"
lazy_static = "1.4"
