[package]
name = "root"
version = "0.1.0"
authors = ["Hadi <hadilashkari@gmail.com>"]
edition = "2018"

[dependencies]
domain-implement = { path = "../domain-new/implement" }
presentation-interface = { path = "../presentation-new/interface"}
presentation-implement = { path = "../presentation-new/implement"}
application-interface = { path = "../application-new/interface"}
application-implement = { path = "../application-new/implement"}
data =  { path = "../data" }
lazy_static = "1.4"
