[package]
name = "root"
version = "0.1.0"
authors = ["Hadi <hadilashkari@gmail.com>"]
edition = "2018"

[dependencies]
domain-implement = { path = "../domain/implement" }
presentation-interface = { path = "../presentation/interface" }
presentation-implement = { path = "../presentation/implement" }
application-interface = { path = "../application/interface" }
application-implement = { path = "../application/implement" }
data =  { path = "../data" }
lazy_static = "1.4"
