[package]
name = "presentation-implement"
version = "0.1.0"
authors = ["Hadi <hadilashkari@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
presentation-interface = { path = "../interface" }
domain-interface = { path = "../../domain-new/interface" }
